{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 308,
  "lineage": "b05e48f8-ae8c-b73c-04df-50aba1a62961",
  "resources": [
    {
      "module": "module.dms",
      "mode": "managed",
      "type": "aws_instance",
      "name": "postgres_bootstrap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02e6c6399b3d63769",
            "arn": "arn:aws:ec2:eu-west-2:851459781336:instance/i-0fe861ccd81d19755",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fe861ccd81d19755",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "key_name": "PFDevAdmin",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03fcdf8996707f1ff"
              }
            ],
            "primary_network_interface_id": "eni-03fcdf8996707f1ff",
            "private_dns": "ip-10-0-100-55.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.100.55",
            "public_ip": "3.8.170.182",
            "region": "eu-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ad3698de5f029eea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b693c8b36febc2b",
            "tags": {
              "Name": "postgres-bootstrap"
            },
            "tags_all": {
              "Name": "postgres-bootstrap"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0749d2578d88b84d0"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "i-0fe861ccd81d19755",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.dms.aws_security_group.bootstrap",
            "module.source_account.aws_db_subnet_group.source",
            "module.source_account.aws_rds_cluster.source",
            "module.source_account.aws_security_group.source_db",
            "module.vpc.aws_subnet.source_private_a",
            "module.vpc.aws_subnet.source_private_b",
            "module.vpc.aws_subnet.source_public_a",
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.dms",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bootstrap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:security-group/sg-0749d2578d88b84d0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0749d2578d88b84d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "194.75.196.200/32"
                ],
                "description": "SSH from home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "postgres-bootstrap",
            "name_prefix": "",
            "owner_id": "851459781336",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "sg-0749d2578d88b84d0",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.dms",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:security-group/sg-0c7aad0422f40cd14",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7aad0422f40cd14",
            "ingress": [],
            "name": "dms-sg",
            "name_prefix": "",
            "owner_id": "851459781336",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "sg-0c7aad0422f40cd14",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.dms",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "aurora_from_bootstrap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-307983772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0b743631ebb851c03",
            "security_group_rule_id": "sgr-0cf8ec571deaba400",
            "self": false,
            "source_security_group_id": "sg-0749d2578d88b84d0",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dms.aws_security_group.bootstrap",
            "module.source_account.aws_security_group.source_db",
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.dms",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "source_from_dms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-1235379203",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0b743631ebb851c03",
            "security_group_rule_id": "sgr-079413e71fe3671eb",
            "self": false,
            "source_security_group_id": "sg-0c7aad0422f40cd14",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dms.aws_security_group.dms",
            "module.source_account.aws_security_group.source_db",
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.dms",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "target_from_bootstrap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-2120412705",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "eu-west-2",
            "security_group_id": "sg-0f5565c4e8638efa6",
            "security_group_rule_id": "sgr-0a0a3b633b107cfe7",
            "self": false,
            "source_security_group_id": "sg-0749d2578d88b84d0",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dms.aws_security_group.bootstrap",
            "module.target_account.aws_security_group.target_db",
            "module.vpc.aws_vpc.source",
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.source_account",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "source_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:security-group/sg-0b743631ebb851c03",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b743631ebb851c03",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0749d2578d88b84d0"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c7aad0422f40cd14"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "source-db-sg",
            "name_prefix": "",
            "owner_id": "851459781336",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "sg-0b743631ebb851c03",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.target_account",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "target_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009831754594:security-group/sg-0f5565c4e8638efa6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5565c4e8638efa6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": null,
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "target-db-sg",
            "name_prefix": "",
            "owner_id": "009831754594",
            "region": "eu-west-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00f79b98915e1f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "id": "sg-0f5565c4e8638efa6",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:internet-gateway/igw-06b7fc535dd5fb744",
            "id": "igw-06b7fc535dd5fb744",
            "owner_id": "851459781336",
            "region": "eu-west-2",
            "tags": {
              "Name": "source-igw"
            },
            "tags_all": {
              "Name": "source-igw"
            },
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "igw-06b7fc535dd5fb744",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009831754594:internet-gateway/igw-024ea3932930befb8",
            "id": "igw-024ea3932930befb8",
            "owner_id": "009831754594",
            "region": "eu-west-2",
            "tags": {
              "Name": "target-igw"
            },
            "tags_all": {
              "Name": "target-igw"
            },
            "vpc_id": "vpc-00f79b98915e1f0ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "id": "igw-024ea3932930befb8",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "source_public_to_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0dc23a6242ce11c833322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0dc23a6242ce11c83",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0edc750113dd82bd2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0dc23a6242ce11c83"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.source",
            "module.vpc.aws_route_table.source_public",
            "module.vpc.aws_vpc.source",
            "module.vpc.aws_vpc.target",
            "module.vpc.aws_vpc_peering_connection.cross_account"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "source_to_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-089e8cec92db06f253322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-089e8cec92db06f25",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0edc750113dd82bd2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-089e8cec92db06f25"
          },
          "dependencies": [
            "module.vpc.aws_route_table.source_private",
            "module.vpc.aws_vpc.source",
            "module.vpc.aws_vpc.target",
            "module.vpc.aws_vpc_peering_connection.cross_account"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "target_to_source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0db87f42b4346d0b5179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-west-2",
            "route_table_id": "rtb-0db87f42b4346d0b5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0edc750113dd82bd2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-west-2",
            "route_table_id": "rtb-0db87f42b4346d0b5"
          },
          "dependencies": [
            "module.vpc.aws_route_table.target_private",
            "module.vpc.aws_vpc.source",
            "module.vpc.aws_vpc.target",
            "module.vpc.aws_vpc_peering_connection.cross_account"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "source_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:route-table/rtb-089e8cec92db06f25",
            "id": "rtb-089e8cec92db06f25",
            "owner_id": "851459781336",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.1.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0edc750113dd82bd2"
              }
            ],
            "tags": {
              "Name": "DMS RDS Source DB private route table"
            },
            "tags_all": {
              "Name": "DMS RDS Source DB private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "rtb-089e8cec92db06f25",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "source_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:route-table/rtb-0dc23a6242ce11c83",
            "id": "rtb-0dc23a6242ce11c83",
            "owner_id": "851459781336",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06b7fc535dd5fb744",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Source public route table"
            },
            "tags_all": {
              "Name": "Source public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "rtb-0dc23a6242ce11c83",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.source",
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "target_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009831754594:route-table/rtb-0db87f42b4346d0b5",
            "id": "rtb-0db87f42b4346d0b5",
            "owner_id": "009831754594",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-0edc750113dd82bd2"
              }
            ],
            "tags": {
              "Name": "DMS RDS Target DB private route table"
            },
            "tags_all": {
              "Name": "DMS RDS Target DB private route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f79b98915e1f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "id": "rtb-0db87f42b4346d0b5",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "target_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009831754594:route-table/rtb-0e7ce06f56d67c2b1",
            "id": "rtb-0e7ce06f56d67c2b1",
            "owner_id": "009831754594",
            "propagating_vgws": [],
            "region": "eu-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024ea3932930befb8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Target public route table"
            },
            "tags_all": {
              "Name": "Target public route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f79b98915e1f0ea"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "id": "rtb-0e7ce06f56d67c2b1",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.target",
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "source_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054e8b9a519a12084",
            "region": "eu-west-2",
            "route_table_id": "rtb-089e8cec92db06f25",
            "subnet_id": "subnet-049da3e653ec029f9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "rtbassoc-054e8b9a519a12084",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.source_private",
            "module.vpc.aws_subnet.source_private_a",
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "source_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b4b253840f361ef",
            "region": "eu-west-2",
            "route_table_id": "rtb-089e8cec92db06f25",
            "subnet_id": "subnet-0c28a6aa0877e67a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "rtbassoc-00b4b253840f361ef",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.source_private",
            "module.vpc.aws_subnet.source_private_b",
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "source_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e6a4da6023ddae5d",
            "region": "eu-west-2",
            "route_table_id": "rtb-0dc23a6242ce11c83",
            "subnet_id": "subnet-03b693c8b36febc2b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "rtbassoc-0e6a4da6023ddae5d",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.source",
            "module.vpc.aws_route_table.source_public",
            "module.vpc.aws_subnet.source_public_a",
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "target_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ec599bf71f6dfb4",
            "region": "eu-west-2",
            "route_table_id": "rtb-0db87f42b4346d0b5",
            "subnet_id": "subnet-0de6f421cbdd24066"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "id": "rtbassoc-07ec599bf71f6dfb4",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.target_private",
            "module.vpc.aws_subnet.target_private_a",
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "target_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e179ab41080306eb",
            "region": "eu-west-2",
            "route_table_id": "rtb-0db87f42b4346d0b5",
            "subnet_id": "subnet-0bbc1c1e762897896"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "id": "rtbassoc-0e179ab41080306eb",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.target_private",
            "module.vpc.aws_subnet.target_private_b",
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "source_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:subnet/subnet-049da3e653ec029f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-049da3e653ec029f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851459781336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "source-private-a"
            },
            "tags_all": {
              "Name": "source-private-a"
            },
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "subnet-049da3e653ec029f9",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "source_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:subnet/subnet-0c28a6aa0877e67a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c28a6aa0877e67a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851459781336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "source-private-b"
            },
            "tags_all": {
              "Name": "source-private-b"
            },
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "subnet-0c28a6aa0877e67a4",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "source_public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:subnet/subnet-03b693c8b36febc2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b693c8b36febc2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851459781336",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "source-public-a"
            },
            "tags_all": {
              "Name": "source-public-a"
            },
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "subnet-03b693c8b36febc2b",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.source"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "target_private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009831754594:subnet/subnet-0de6f421cbdd24066",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de6f421cbdd24066",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009831754594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "target-private-a"
            },
            "tags_all": {
              "Name": "target-private-a"
            },
            "vpc_id": "vpc-00f79b98915e1f0ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "id": "subnet-0de6f421cbdd24066",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "target_private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009831754594:subnet/subnet-0bbc1c1e762897896",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bbc1c1e762897896",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009831754594",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-2",
            "tags": {
              "Name": "target-private-b"
            },
            "tags_all": {
              "Name": "target-private-b"
            },
            "vpc_id": "vpc-00f79b98915e1f0ea"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "id": "subnet-0bbc1c1e762897896",
            "region": "eu-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "source",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:851459781336:vpc/vpc-00aed2d76a205edf2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe88d4ef82a92cf5",
            "default_route_table_id": "rtb-0c078aebad0325e35",
            "default_security_group_id": "sg-0bf0843bfd0883186",
            "dhcp_options_id": "dopt-0228dbf64fae4a464",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00aed2d76a205edf2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c078aebad0325e35",
            "owner_id": "851459781336",
            "region": "eu-west-2",
            "tags": {
              "Name": "source-vpc"
            },
            "tags_all": {
              "Name": "source-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "851459781336",
            "id": "vpc-00aed2d76a205edf2",
            "region": "eu-west-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:009831754594:vpc/vpc-00f79b98915e1f0ea",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0b225033bf9f23738",
            "default_route_table_id": "rtb-0ecff214679b199be",
            "default_security_group_id": "sg-0b955d3976c1cf42a",
            "dhcp_options_id": "dopt-ac055ec5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f79b98915e1f0ea",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ecff214679b199be",
            "owner_id": "009831754594",
            "region": "eu-west-2",
            "tags": {
              "Name": "target-vpc"
            },
            "tags_all": {
              "Name": "target-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "009831754594",
            "id": "vpc-00f79b98915e1f0ea",
            "region": "eu-west-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "cross_account",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].source",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "auto_accept": false,
            "id": "pcx-0edc750113dd82bd2",
            "peer_owner_id": "009831754594",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-00f79b98915e1f0ea",
            "region": "eu-west-2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-00aed2d76a205edf2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.source",
            "module.vpc.aws_vpc.target"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "accept",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].target",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0edc750113dd82bd2",
            "peer_owner_id": "851459781336",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-00aed2d76a205edf2",
            "region": "eu-west-2",
            "vpc_id": "vpc-00f79b98915e1f0ea",
            "vpc_peering_connection_id": "pcx-0edc750113dd82bd2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.source",
            "module.vpc.aws_vpc.target",
            "module.vpc.aws_vpc_peering_connection.cross_account"
          ]
        }
      ]
    }
  ]
}